# predpca-py

./: .bumpversion.toml  .gitignore  README.md  pyproject.toml  requirements.txt
predpca/: __init__.py  predpca.py
predpca/aloi/: README.md  compare_models.py  main.py  main_compare_models.py  main_plot_prediction_error.py  main_preprocess.py  plot_comparison_result.py  predpca_utils.py  visualize.py
predpca/bdd100k/: README.md  main_analyze_categorical_features.py  main_analyze_dynamical_features.py  main_preprocess.py  main_test.py  main_train.py
predpca/mnist/: README.md  compare_models.py  create_digit_sequence.py  main_compare_models.py  main_plot_encodings.py  main_plot_predicted_images.py  main_plot_prediction_error.py  plot_comparison_result.py  postprocess.py  predpca_utils.py  visualize.py  wta_prediction.py
predpca/models/: __init__.py  base_autoencoder.py  base_encoder.py  decoder.py  encoder.py  ica.py  model.py  wta_classifier.py
predpca/models/baselines/: __init__.py
predpca/models/baselines/ae_predictor/: encoder.py
predpca/models/baselines/autoencoder/: encoder.py  model.py
predpca/models/baselines/ltae/: encoder.py  model.py
predpca/models/baselines/simple_nn/: model.py
predpca/models/baselines/tae/: encoder.py  model.py
predpca/models/baselines/tica/: encoder.py
predpca/models/baselines/vae/: encoder.py  model.py  vae.py
predpca/models/predpca/: encoder.py
predpca/nonlinear/: README.md  canonical_nonlinear_system.py  lorenz_attractor.py  main.py
predpca/utils/: __init__.py  device_manager.py  pcacov.py  pcacov_torch.py  sym_positive_torch.py
test/: test_aloi_main.py  test_aloi_main_plot_prediction_error.py  test_mnist_main_plot_encodings.py  test_mnist_main_plot_predicted_images.py  test_mnist_main_plot_prediction_error.py  test_nonlinear_main.py
