[project]
name = "predpca"
version = "0.1.0"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "scikit-learn",
    "ffmpeg-python",
    "moviepy",       # need ffmpeg
    "scikit-image",
    "torch",
    "torchvision",
    "tqdm",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "predpca",
    "predpca.utils",
    "predpca.mnist",
    "predpca.aloi",
    "predpca.bdd100k",
]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
disable_error_code = ["import-untyped"]
